--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -1,1 +1,56 @@
-[]
+[
+  {
+    "id": "215873af-9bd3-491a-aa07-79d7044df80e",
+    "name": "toto",
+    "species": "dog",
+    "breed": "",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "urgent": true,
+    "status": "Pendente"
+  },
+  {
+    "id": "0e55e0aa-aa48-4250-9896-87e73cd7339d",
+    "name": "Dragon",
+    "species": "dog",
+    "breed": "",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "urgent": true,
+    "status": "Pendente"
+  },
+  {
+    "id": "7609ed4e-07b5-46b2-bff4-f5fd65c25827",
+    "name": "Fenix",
+    "species": "cat",
+    "breed": "",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "urgent": true,
+    "status": "Pendente"
+  },
+  {
+    "id": "f93b3527-b7e8-443f-9274-899fd45afc65",
+    "name": "Jhon",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "urgent": false,
+    "status": "A"
+  },
+  {
+    "id": "ef117fbe-4a2a-4a7e-9587-d6e1e73f1b5d",
+    "name": "Jhon",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "urgent": false,
+    "status": "Pendente"
+  },
+  {
+    "id": "72ef6534-f7a2-4677-b257-9d9703f81acc",
+    "name": "Bily",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "urgent": false,
+    "status": "Atendido"
+  }
+]
