route/controller/model appointments

--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -1,21 +1,12 @@
 [
   {
-    "id": "215873af-9bd3-491a-aa07-79d7044df80e",
-    "name": "toto",
-    "species": "dog",
-    "breed": "",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "urgent": true,
-    "status": "Pendente"
-  },
-  {
     "id": "0e55e0aa-aa48-4250-9896-87e73cd7339d",
     "name": "Dragon",
     "species": "dog",
     "breed": "",
     "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
     "urgent": true,
-    "status": "Pendente"
+    "status": "Atendido"
   },
   {
     "id": "7609ed4e-07b5-46b2-bff4-f5fd65c25827",
