--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -1,47 +1,52 @@
 [
   {
-    "id": "0e55e0aa-aa48-4250-9896-87e73cd7339d",
-    "name": "Dragon",
-    "species": "dog",
-    "breed": "",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "urgent": true,
-    "status": "Atendido"
-  },
-  {
-    "id": "7609ed4e-07b5-46b2-bff4-f5fd65c25827",
-    "name": "Fenix",
-    "species": "cat",
-    "breed": "",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "urgent": true,
-    "status": "Atendido"
-  },
-  {
-    "id": "f93b3527-b7e8-443f-9274-899fd45afc65",
-    "name": "Jhon",
-    "species": "cat",
-    "breed": "siames",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "urgent": false,
-    "status": "Cancelado"
-  },
-  {
-    "id": "ef117fbe-4a2a-4a7e-9587-d6e1e73f1b5d",
-    "name": "Jhon",
-    "species": "cat",
-    "breed": "siames",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "urgent": false,
-    "status": "Atendido"
-  },
-  {
-    "id": "72ef6534-f7a2-4677-b257-9d9703f81acc",
+    "id": "26817746-685e-476e-a098-3fabc64b1d41",
     "name": "Bily",
     "species": "cat",
     "breed": "siames",
     "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
     "urgent": false,
-    "status": "Pendente"
+    "status": "Atendido"
+  },
+  {
+    "id": "f7ba5ca2-87c3-4c65-b036-bef02ce74c98",
+    "name": "Bily",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
+    "urgent": false,
+    "status": "Atendido"
+  },
+  {
+    "id": "eff8f113-c089-4470-aad7-94f347baa939",
+    "name": "Bily",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
+    "urgent": false,
+    "status": "Atendido"
+  },
+  {
+    "id": "2dfbae07-6cd9-4c30-89cf-0622ea8523dd",
+    "name": "Bily",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
+    "urgent": false,
+    "status": "Atendido"
+  },
+  {
+    "id": "ab502ac4-4916-49a6-9631-a7af9879584c",
+    "name": "Bily",
+    "species": "cat",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
+    "urgent": false,
+    "status": "Atendido"
   }
 ]
