code review -> medic_id in appointment

--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -1,52 +1,50 @@
 [
   {
-    "id": "26817746-685e-476e-a098-3fabc64b1d41",
+    "id": "f7526317-559c-4fd2-8fb7-1e10907684ea",
     "name": "Bily",
     "species": "cat",
     "breed": "siames",
     "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
-    "urgent": false,
-    "status": "Atendido"
+    "medic_id": "b155b43c-3238-4f92-b17f-7889c0c42976",
+    "urgent": true,
+    "status": "Atendido",
+    "created_at": "2020-07-12T23:44:01.122Z",
+    "updated_at": "2020-07-12T23:44:01.122Z"
   },
   {
-    "id": "f7ba5ca2-87c3-4c65-b036-bef02ce74c98",
-    "name": "Bily",
-    "species": "cat",
+    "id": "9edb5ff7-5f33-4c90-9f2b-6f1d96171515",
+    "name": "John asdasdasd",
+    "species": "Dog",
     "breed": "siames",
     "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
+    "medic_id": "",
     "urgent": false,
-    "status": "Atendido"
+    "status": "Pendente",
+    "created_at": "2020-07-13T00:09:49.813Z",
+    "updated_at": "2020-07-13T00:09:49.813Z"
   },
   {
-    "id": "eff8f113-c089-4470-aad7-94f347baa939",
-    "name": "Bily",
-    "species": "cat",
+    "id": "1baf3a4e-e882-4b65-8e2d-0e81b8c7d068",
+    "name": "John asdasdasd",
+    "species": "Dog",
     "breed": "siames",
     "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
+    "medic_id": "",
     "urgent": false,
-    "status": "Atendido"
+    "status": "Pendente",
+    "created_at": "2020-07-13T00:08:14.360Z",
+    "updated_at": "2020-07-13T00:08:14.360Z"
   },
   {
-    "id": "2dfbae07-6cd9-4c30-89cf-0622ea8523dd",
-    "name": "Bily",
-    "species": "cat",
+    "id": "edc105c8-aa6d-40ad-a164-7bafbb23850b",
+    "name": "Billy Alterado",
+    "species": "Dog",
     "breed": "siames",
     "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
-    "urgent": false,
-    "status": "Atendido"
-  },
-  {
-    "id": "ab502ac4-4916-49a6-9631-a7af9879584c",
-    "name": "Bily",
-    "species": "cat",
-    "breed": "siames",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "e8d7ca39-41cd-408a-9689-c0c7ee9d9c4d",
-    "urgent": false,
-    "status": "Atendido"
+    "medic_id": "",
+    "urgent": true,
+    "status": "Pendente",
+    "created_at": "2020-07-13T00:10:03.687Z",
+    "updated_at": "2020-07-13T00:26:14.289Z"
   }
 ]
