--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -12,30 +12,6 @@
     "updated_at": "2020-07-12T23:44:01.122Z"
   },
   {
-    "id": "9edb5ff7-5f33-4c90-9f2b-6f1d96171515",
-    "name": "John asdasdasd",
-    "species": "Dog",
-    "breed": "siames",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "",
-    "urgent": false,
-    "status": "Pendente",
-    "created_at": "2020-07-13T00:09:49.813Z",
-    "updated_at": "2020-07-13T00:09:49.813Z"
-  },
-  {
-    "id": "1baf3a4e-e882-4b65-8e2d-0e81b8c7d068",
-    "name": "John asdasdasd",
-    "species": "Dog",
-    "breed": "siames",
-    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
-    "medic_id": "",
-    "urgent": false,
-    "status": "Pendente",
-    "created_at": "2020-07-13T00:08:14.360Z",
-    "updated_at": "2020-07-13T00:08:14.360Z"
-  },
-  {
     "id": "edc105c8-aa6d-40ad-a164-7bafbb23850b",
     "name": "Billy Alterado",
     "species": "Dog",
@@ -45,6 +21,18 @@
     "urgent": true,
     "status": "Pendente",
     "created_at": "2020-07-13T00:10:03.687Z",
-    "updated_at": "2020-07-13T00:26:14.289Z"
+    "updated_at": "2020-07-13T00:32:01.552Z"
+  },
+  {
+    "id": "b5f8303f-3ba9-4969-8d47-9479085ae84d",
+    "name": "Jony",
+    "species": "Dog",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "70aac942-c6ac-4c6e-8879-c58024d2481a",
+    "urgent": false,
+    "status": "Cancelado",
+    "created_at": "2020-07-13T00:32:47.183Z",
+    "updated_at": "2020-07-13T00:40:22.681Z"
   }
 ]
