filter / all appointments for a medic

--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -22,5 +22,29 @@
     "status": "Pendente",
     "created_at": "2020-07-13T00:10:03.687Z",
     "updated_at": "2020-07-13T00:32:01.552Z"
+  },
+  {
+    "id": "93f5383a-e140-42ac-9093-87b6e861ad6e",
+    "name": "John cage asdasdasdasd",
+    "species": "Dog",
+    "breed": "siames",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "70aac942-c6ac-4c6e-8879-c58024d2481a",
+    "urgent": true,
+    "status": "Pendente",
+    "created_at": "2020-07-13T01:25:20.145Z",
+    "updated_at": "2020-07-13T01:25:20.145Z"
+  },
+  {
+    "id": "633dea57-38bf-4bcf-9d16-3413f2572de2",
+    "name": "Megue",
+    "species": "Dog",
+    "breed": "",
+    "specialty_id": "b155b43c-3238-4f92-b17f-7889c0c42896",
+    "medic_id": "b51e88cc-942b-4a29-b90c-04ebc9d5a35f",
+    "urgent": false,
+    "status": "Pendente",
+    "created_at": "2020-07-13T01:26:15.789Z",
+    "updated_at": "2020-07-13T01:26:15.789Z"
   }
 ]
