--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "build": "tsc",
     "start": "ts-node -r tsconfig-paths/register src/shared/server.ts",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/shared/server.ts",
-    "test": "jest"
+    "test": "jest --clearCache"
   },
-
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "uuidv4": "^6.0.7",
-    "cors": "^2.8.5"
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "typescript": "^3.9.6",
     "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.4",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "eslint": "^6.8.0",
@@ -29,8 +30,10 @@
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
-    "tsconfig-paths": "^3.9.0"
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.9.6"
   }
 }
