--- a/src/shared/database/appointments.json
+++ b/src/shared/database/appointments.json
@@ -1,1 +1,14 @@
-[]
+[
+  {
+    "id": "c269eae4-443a-4e40-bd83-bd0426e26274",
+    "name": "Jony",
+    "species": "Dog",
+    "breed": "",
+    "specialty_id": "ccf1167d-df15-4281-a68c-3830626b98df",
+    "medic_id": "94babbaa-2a7e-4874-815b-5ded5b5269f0",
+    "urgent": false,
+    "status": "Pendente",
+    "created_at": "2020-07-13T22:23:27.729Z",
+    "updated_at": "2020-07-13T22:27:04.165Z"
+  }
+]
